--- a/briose.html
+++ b/briose.html
@@ -9,7 +9,7 @@
 			<meta name="author" content="Nitulescu Alexandra"/>
 			<meta name="description" content="Dulciuri pentru Suflet isi propune sa prezinte retete diverse de torturi,briose si prajituri cat si o parte de blog cu noutati din industria culinara a dulciurilor si sfaturi despre cum sa faci cele mai bune dulciuri.Briosele sunt pe placul tuturor indiferent de varsta si sunt foarte usor de facut de aceea am hotarat sa le includem in colectia noastra."/>
 			<meta name="keywords" content="Dulciuri pentru Suflet,retete,torturi,briose,blog,ciocolata,crema,fructe,vanilie,ingrediente,preparare,oua,faina,lapte,ulei"/>
-			<link rel="shortcut icon" type="image/x-icon" href="../Photos/cake.ico">
+			<link rel="shortcut icon" type="image/x-icon" href="cake.ico">
 		
 		</head>
 		
