--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 	<html>
 
 		<head>
-			<link type="text/css" rel="stylesheet" href="../Css/css_total.css"/>
+			<link type="text/css" rel="stylesheet" href="css_total.css"/>
 			<title> HOME-Dulciuri pentru Suflet </title>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 			<meta name="author" content="Nitulescu Alexandra"/>
 			<meta name="description" content="Dulciuri pentru Suflet isi propune sa prezinte retete diverse de torturi,briose si prajituri cat si o parte de blog cu noutati din industria culinara a dulciurilor si sfaturi despre cum sa faci cele mai bune dulciuri."/>
 			<meta name="keywords" content="Dulciuri pentru Suflet,retete,torturi,briose,blog,ciocolata,descriere,introducere,despre noi,istorie,Romania"/>
-			<link rel="shortcut icon" type="image/x-icon" href="../Photos/cake.ico">
+			<link rel="shortcut icon" type="image/x-icon" href="cake.ico">
 		
 		</head>
 		
@@ -17,7 +17,7 @@
 		
 			<header>
 				<!--TITLE_PHOTO-->
-				<a id="up" class="title" href="index.html" title="HOME"> <img id="title_img" src="../Photos/title_test.png" alt="Title"> </a>				
+				<a id="up" class="title" href="index.html" title="HOME"> <img id="title_img" src="title_test.png" alt="Title"> </a>				
 				
 				<!--MENU BAR-->
 				<nav class="menu_bar">
