--- a/ustensile.html
+++ b/ustensile.html
@@ -2,14 +2,14 @@
 	<html>
 
 		<head>
-			<link type="text/css" rel="stylesheet" href="../Css/css_total.css"/>
+			<link type="text/css" rel="stylesheet" href="css_total.css"/>
 			<title> NOUTATI-Dulciuri pentru Suflet </title>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 			<meta name="author" content="Nitulescu Alexandra"/>
 			<meta name="description" content="Dulciuri pentru Suflet isi propune sa prezinte retete diverse de torturi,briose si prajituri cat si o parte de blog cu noutati din industria culinara a dulciurilor si sfaturi despre cum sa faci cele mai bune dulciuri.Afla ce e nou in industrie si ce ustensila care sa ne faca treaba mai usoara si mai placuta a fost inventata."/>
 			<meta name="keywords" content="Dulciuri pentru Suflet,retete,torturi,briose,blog,ciocolata,crema,fructe,vanilie,ingrediente,preparare,oua,faina,lapte,ulei"/>
-			<link rel="shortcut icon" type="image/x-icon" href="../Photos/cake.ico">
+			<link rel="shortcut icon" type="image/x-icon" href="cake.ico">
 		
 		</head>
 		
@@ -18,7 +18,7 @@
 			<header>
 			
 			     <!--TITLE_PHOTO-->
-				<a id="up" class="title" href="index.html" title="HOME"> <img id="title_img" src="../Photos/title_test.png" alt="Title"> </a>	
+				<a id="up" class="title" href="index.html" title="HOME"> <img id="title_img" src="title_test.png" alt="Title"> </a>	
 				
 				<!--MENU BAR-->
 				<nav class="menu_bar">
@@ -46,8 +46,8 @@
                 <p class="page_menu_blog_p">ARTICOLE</p>
 
 				<ul class="page_menu_blog">  
-					<li class="blog"> <a href="#maggiso" title="Maggiso-cake server"><img class="article_photo" src="../Photos/maggiso.png" alt="Maggiso"/> </a>  </li>
-					<li class="blog"> <a href="#zenker" title="Zenker-slicing kit"><img class="article_photo" src="../Photos/zenker.png" alt="Zenker"/> </a> </li>
+					<li class="blog"> <a href="#maggiso" title="Maggiso-cake server"><img class="article_photo" src="maggiso.png" alt="Maggiso"/> </a>  </li>
+					<li class="blog"> <a href="#zenker" title="Zenker-slicing kit"><img class="article_photo" src="zenker.png" alt="Zenker"/> </a> </li>
 				</ul>
 			
 			
@@ -69,8 +69,8 @@
 					<p>Il puteti comanda de pe <a href="http://www.amazon.com/Zenker-Stainless-Slicing-Serrated-3-Piece/dp/B003AZZB8I">Amazon</a>
 					<p>Adaug mai jos o poza ca un mini-tutorial pentru folosirea produsului.</p>
 					<div class="poza_zenker">
-					<a target="_blank" href="../Photos/level.png">
-						<img src="../Photos/level.png" alt="Tutorial"/>
+					<a target="_blank" href="level.png">
+						<img src="level.png" alt="Tutorial"/>
 					</a>
 				</div>
 				</article>
