--- a/torturi.html
+++ b/torturi.html
@@ -71,11 +71,12 @@
 							<ul>
 								<li>250g capsuni</li>
 								<li>250g piersica din compot</li>
+								<li>1 plic de crema cu gust de vanilie (Dr. Oetker)</li>
 							</ul>
 						</li>
 						<li>Pentru ornat:
 							<ul>
-								<li>2 plicuri praf de frisca Dr. Qetker</li>
+								<li>2 plicuri praf de frisca (Dr.Oetker)</li>
 								<li>Zmeura si capsuni in cantitatile dorite de fiecare.</li>
 							</ul>
 						</li>
